# smulgrad

./: .gitignore  README.md  assignment.tex  pyproject.toml
smulgrad/: __init__.py  engine.py  mnist.py  nn.py
tests/: adapters.py  mnist_utils.py
tests/cases/: conftest.py  demo_mlp.py  demo_mnist.py  test_bonus_mnist.py  test_part1_scalar.py  test_part2_backward.py  test_part3_ops.py  test_part4_tensor.py  test_part5_matrix.py  test_part6_nn.py  test_part7_mlp.py
