[project]
name = "smulgrad"
version = "0.1.0"
description = "A from-scratch implementation of automatic differentiation for learning purposes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=1.24.0",
    "plotext>=5.3.2",
    "pytest>=7.0.0",
    "rich-pixels>=3.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest-timeout>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests/cases"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
